--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"svelte": "^5.0.0",
 		"tailwindcss": "^4.0.0",
 		"vite": "^6.2.5"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.12"
 	}
 }
